2014-11-28  johannes@brilliantservice.co.jp

	* Source/NSThread.m: Set thread name visible to OS
	* configure.ac: test for pthread_set_name_np()
	Integrated Johannes patch with some changes to make things work if
	we set the name before starting the thread.  Commend out ms-windows
	code which doesn't work yet.

2014-11-20  Sergei Golovin <Golovin.SV@gmail.com>

	* Source/GSSocketStream.m:
	* Tests/base/NSURL/Helpers/capture.m:
	* Tests/base/NSURL/testKey.pem:
	* Tests/base/NSURL/test02.m:
	* Tests/base/NSURL/testCert.pem:
	Implement TLS on server socket and make use of it in HTTPS URL helper
	code. Also, permit NSStream zero length write (it seems OSX allows
	it).

2014-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Avoinf some unnecessary retain/release cycles.

2014-11-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: If a user default value is removed while running,
	revert to the value from the environment or the hard coded fallback
	rather than continuing to use the previous value from the defaults
	system.

2014-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: When handling perform in another thread, check
	more carefully for inter-thread communications (pipe on unix, event
	on windows) and make sure we invalidate performers safely outside
	the lock protected region when I/O is complete.

2014-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Fix leak of handle when starting a new
	connection after an older one is dropped by the remote end.

2014-10-30  Sergei Golovin <Golovin.SV@gmail.com>

	* Source/NSURLProtocol.m: Fix memory leak and possible hang on retry
	(bug #43461).

2014-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/news.texi:
	* Documentation/ReleaseNotes.gsdoc:
	* Version: Bump subminor version for bugfix release
	* NSTimeZones/NSTimeZones.tar: update
	* Source/NSProcessInfo.m: Use separate lock for globally unique