@@ -1,3 +1,8 @@
+2014-11-29  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSScanner.m: Fixup error in scanning doubles with excess
+	precision (bug #43722).
+
 2014-11-28  johannes@brilliantservice.co.jp
 
 	* Source/NSThread.m: Set thread name visible to OS
@@ -19,7 +24,7 @@
 
 2014-11-20  Richard Frith-Macdonald <rfm@gnu.org>
 
-	* Source/NSRunLoop.m: Avoinf some unnecessary retain/release cycles.
+	* Source/NSRunLoop.m: Avoind some unnecessary retain/release cycles.
 
 2014-11-05  Richard Frith-Macdonald <rfm@gnu.org>
 
